--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -8,46 +8,65 @@
         Title="MainWindow" Height="720" Width="1280" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="24*"  />
+            <RowDefinition Height="23*"  />
 
-            <RowDefinition Height="100*"/>
-            <RowDefinition Height="62*"/>
-            <RowDefinition Height="223*"   />
-            <RowDefinition Height="240*"/>
-            <RowDefinition Height="42*"/>
+            <RowDefinition Height="76*"/>
+            <RowDefinition Height="53*"/>
+
+            <RowDefinition Height="495*"   />
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
 
-            <ColumnDefinition Width="97*" />
-            <ColumnDefinition Width="259*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid Grid.Column="1" HorizontalAlignment="Left" Height="453" Margin="10,0,0,0" Grid.Row="3" VerticalAlignment="Top" Width="907" Grid.RowSpan="2"/>
         <DockPanel>
-            <Menu DockPanel.Dock="Top" Height="26" Margin="10,0,0,0">
+            <Menu DockPanel.Dock="Top" Height="26" Margin="0,0,0,0">
                 <MenuItem Header="_Dane">
-                    <MenuItem Header="_Open"/>
-                    <MenuItem Header="_Close"/>
-                    <MenuItem Header="_Save"/>
                 </MenuItem>
                 <MenuItem Header="_Edycja">
-                    <MenuItem Header="_Open"/>
-                    <MenuItem Header="_Close"/>
                     <MenuItem Header="_Save"/>
                 </MenuItem>
                 <MenuItem Header="Widok">
-                    <MenuItem Header="_Open"/>
                     <MenuItem Header="_Close"/>
-                    <MenuItem Header="_Save"/>
                 </MenuItem>
                 <MenuItem Header="_Pomoc">
-                    <MenuItem Header="_Open"/>
-                    <MenuItem Header="_Close"/>
-                    <MenuItem Header="_Save"/>
                 </MenuItem>
-                
             </Menu>
             <StackPanel></StackPanel>
         </DockPanel>
+        <Grid Height="493" Margin="10,10,952,0" Grid.Row="3" VerticalAlignment="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0*"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="222*"/>
+                <RowDefinition Height="221*"/>
+            </Grid.RowDefinitions>
+        </Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="158,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="316,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="474,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="632,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="790,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="948,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="1106,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+
+        <Button Content="Button" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="109,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="218,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="327,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="436,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="545,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="654,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="763,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="872,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="981,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="1090,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="1199,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" Height="39"/>
+        <Grid HorizontalAlignment="Left" Height="475" Margin="330,56,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="934">
+            <DataGrid HorizontalAlignment="Left" Height="455" Margin="10,10,0,0" VerticalAlignment="Top" Width="914"/>
+        </Grid>
     </Grid>
 </Window>
