--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -43,6 +43,8 @@
                 <RowDefinition Height="222*"/>
                 <RowDefinition Height="221*"/>
             </Grid.RowDefinitions>
+            <TreeView Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="227" Margin="19,10,0,0" VerticalAlignment="Top" Width="283"/>
+            <TreeView Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="226" Margin="19,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="283"/>
         </Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="158,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="316,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
@@ -68,5 +70,7 @@
         <Grid HorizontalAlignment="Left" Height="475" Margin="330,56,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="934">
             <DataGrid HorizontalAlignment="Left" Height="455" Margin="10,10,0,0" VerticalAlignment="Top" Width="914"/>
         </Grid>
+        <TextBox HorizontalAlignment="Left" Height="44" Margin="343,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="131"/>
+        <TextBox HorizontalAlignment="Left" Height="44" Margin="1121,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="129"/>
     </Grid>
 </Window>
