--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -43,7 +43,18 @@
                 <RowDefinition Height="222*"/>
                 <RowDefinition Height="221*"/>
             </Grid.RowDefinitions>
-            <TreeView Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="227" Margin="19,10,0,0" VerticalAlignment="Top" Width="283"/>
+            <TreeView Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="227" Margin="19,10,0,0" VerticalAlignment="Top" Width="283">
+                <ListBoxItem Content="haha"/>
+                <TreeViewItem Header="ala" IsExpanded="True">
+                <TreeViewItem Header="Jesper"/>
+                <TreeViewItem Header="Aaberg"/>
+                <TreeViewItem Header="12345"/>
+                </TreeViewItem>
+
+
+            </TreeView>
+
+
             <TreeView Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="226" Margin="19,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="283"/>
         </Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="158,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
