--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -55,7 +55,19 @@
             </TreeView>
 
 
-            <TreeView Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="226" Margin="19,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="283"/>
+            <TreeView Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="226" Margin="19,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="283">
+                <TreeViewItem Header="Employee2" IsExpanded="True">
+                    <TreeViewItem.Items>
+                        <StackPanel>
+                            <Button>Dominik</Button>
+                            <Button>Dominik</Button>
+                            <Button>Paiha</Button>
+                            <Button>98765</Button>
+                        </StackPanel>
+                    </TreeViewItem.Items>
+
+                </TreeViewItem>
+            </TreeView>
         </Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="158,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="316,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
