--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -60,7 +60,7 @@
                     <TreeViewItem.Items>
                         <StackPanel>
                             <Button>Dominik</Button>
-                            <Button>Dominik</Button>
+                            <Button>ominik</Button>
                             <Button>Paiha</Button>
                             <Button>98765</Button>
                         </StackPanel>
