--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -79,7 +79,7 @@
 
         <Button Content="Button" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="109,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="218,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button x:Name="refresh" Content="Odśwież" HorizontalAlignment="Left" Margin="218,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="refresh_Click"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="327,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="436,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="545,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
@@ -90,9 +90,24 @@
         <Button Content="Button" HorizontalAlignment="Left" Margin="1090,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="1199,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" Height="39"/>
         <Grid HorizontalAlignment="Left" Height="475" Margin="330,56,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="934">
-            <DataGrid HorizontalAlignment="Left" Height="455" Margin="10,10,0,0" VerticalAlignment="Top" Width="914"/>
+            <ListView BorderThickness="1" ItemsSource="{Binding}" Margin="0,10,0,0" Height="Auto" x:Name="FirmaListBox" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+                <ListView.View>
+                    <GridView>
+                        <GridView.Columns>
+                            <GridViewColumn Width="50" Header="ID" DisplayMemberBinding="{Binding ID_Firmy}" />
+                            <GridViewColumn Width="100" Header="Nazwa Firmy" DisplayMemberBinding="{Binding Nazwa_Firmy}" />
+                            <GridViewColumn Width="100" Header="NIP" DisplayMemberBinding="{Binding NIP}" />
+                            <GridViewColumn Width="100" Header="Miasto" DisplayMemberBinding="{Binding Miasto}" />
+                            <GridViewColumn Width="100" Header="Ulica" DisplayMemberBinding="{Binding Ulica}" />
+                            <GridViewColumn Width="100" Header="Numer Telefonu" DisplayMemberBinding="{Binding Numer_Telefonu}" />
+                            <GridViewColumn Width="100" Header="E-mail" DisplayMemberBinding="{Binding Email}" />
+                        </GridView.Columns>
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </Grid>
         <TextBox HorizontalAlignment="Left" Height="44" Margin="343,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="131"/>
         <TextBox HorizontalAlignment="Left" Height="44" Margin="1121,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="129"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="-178,181,0,0" Grid.Row="3" VerticalAlignment="Top"/>
     </Grid>
 </Window>
