--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -77,7 +77,7 @@
         <Button Content="Button" HorizontalAlignment="Left" Margin="1106,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
         <Button Content="Button" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
 
-        <Button Content="Button" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button x:Name="AddUser" Content="Add User" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Add_User"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="109,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
         <Button x:Name="refresh" Content="Odśwież" HorizontalAlignment="Left" Margin="218,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="refresh_Click"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="327,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
@@ -108,6 +108,5 @@
         </Grid>
         <TextBox HorizontalAlignment="Left" Height="44" Margin="343,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="131"/>
         <TextBox HorizontalAlignment="Left" Height="44" Margin="1121,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="129"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="-178,181,0,0" Grid.Row="3" VerticalAlignment="Top"/>
     </Grid>
 </Window>
