Baza danych wyświetla poprawnie elementy

--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -96,7 +96,7 @@
                         <GridView.Columns>
                             <GridViewColumn Width="50" Header="ID" DisplayMemberBinding="{Binding ID_Firmy}" />
                             <GridViewColumn Width="100" Header="Nazwa Firmy" DisplayMemberBinding="{Binding Nazwa_Firmy}" />
-                            <GridViewColumn Width="100" Header="NIP" DisplayMemberBinding="{Binding NIP}" />
+                            <GridViewColumn Width="100" Header="NIP" DisplayMemberBinding="{Binding Nip}" />
                             <GridViewColumn Width="100" Header="Miasto" DisplayMemberBinding="{Binding Miasto}" />
                             <GridViewColumn Width="100" Header="Ulica" DisplayMemberBinding="{Binding Ulica}" />
                             <GridViewColumn Width="100" Header="Numer Telefonu" DisplayMemberBinding="{Binding Numer_Telefonu}" />
