--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -78,7 +78,7 @@
         <Button Content="Button" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
 
         <Button x:Name="AddUser" Content="Add User" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Add_User"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="109,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
+        <Button Content="Remove user" HorizontalAlignment="Left" Margin="109,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Remove_User"/>
         <Button x:Name="refresh" Content="Odśwież" HorizontalAlignment="Left" Margin="218,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="refresh_Click"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="327,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="436,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
