--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -29,8 +29,7 @@
                 <MenuItem Header="Widok">
                     <MenuItem Header="_Close"/>
                 </MenuItem>
-                <MenuItem Header="_Pomoc">
-                </MenuItem>
+                <MenuItem Header="_Pomoc" Height="26" Width="49"/>
             </Menu>
             <StackPanel></StackPanel>
         </DockPanel>
@@ -68,27 +67,19 @@
                 </TreeViewItem>
             </TreeView>
         </Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="158,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="316,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="474,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="632,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="790,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="948,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="1106,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="77" Grid.RowSpan="2"/>
+        <Button x:Name="Storage" Content="Magazyn" HorizontalAlignment="Left" Margin="213,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="Storage_Open"/>
+        <Button x:Name="Settlements" Content="Rozliczenia" HorizontalAlignment="Left" Margin="425,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="Settlements_Open"/>
+        <Button x:Name="Contractors" Content="Kontrahenci" HorizontalAlignment="Left" Margin="637,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="Contractors_Open"/>
+        <Button x:Name="Statments" Content="Zestawienia" HorizontalAlignment="Left" Margin="849,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="Statments_Open"/>
+        <Button x:Name="VATRegister" Content="Rejestry VAT" HorizontalAlignment="Left" Margin="1061,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="VATRegister_Open"/>
+        <Button x:Name="Invoice" Content="Faktury" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Margin="1,0,0,0" Click="Invoice_Open"/>
 
-        <Button x:Name="AddUser" Content="Add User" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Add_User"/>
-        <Button Content="Remove user" HorizontalAlignment="Left" Margin="109,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Remove_User"/>
+        <Button x:Name="AddUser" Content="Dodaj Firmę" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Add_User"/>
+        <Button Content="Usuń Firmę" HorizontalAlignment="Left" Margin="109,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Remove_User"/>
         <Button x:Name="refresh" Content="Odśwież" HorizontalAlignment="Left" Margin="218,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="refresh_Click"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="327,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="436,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="545,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="654,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="763,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="872,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="981,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="1090,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="1199,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75" Height="39"/>
+        <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="951,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open"/>
+        <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1060,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
+        <Button x:Name="ToSquare" Content="Rozlicz" HorizontalAlignment="Left" Margin="1169,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="ToSquare_Open"/>
         <Grid HorizontalAlignment="Left" Height="475" Margin="330,56,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="934">
             <ListView BorderThickness="1" ItemsSource="{Binding}" Margin="0,10,0,0" Height="Auto" x:Name="FirmaListBox" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
                 <ListView.View>
@@ -106,7 +97,7 @@
                 </ListView.View>
             </ListView>
         </Grid>
-        <TextBox HorizontalAlignment="Left" Height="44" Margin="343,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="131"/>
-        <TextBox HorizontalAlignment="Left" Height="44" Margin="1121,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="129"/>
+        <TextBox x:Name="SumShops" HorizontalAlignment="Left" Height="44" Margin="343,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="Suma Zakupów:" VerticalAlignment="Top" Width="131"/>
+        <TextBox x:Name="SumSell" HorizontalAlignment="Left" Height="44" Margin="1121,474,0,0" Grid.Row="3" TextWrapping="Wrap" Text="Suma Sprzedaży:" VerticalAlignment="Top" Width="129"/>
     </Grid>
 </Window>
