--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -8,12 +8,12 @@
         Title="MainWindow" Height="720" Width="1280" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="23*"  />
+            <RowDefinition Height="25*"  />
 
-            <RowDefinition Height="76*"/>
-            <RowDefinition Height="53*"/>
+            <RowDefinition Height="89*"/>
+            <RowDefinition Height="49*"/>
 
-            <RowDefinition Height="495*"   />
+            <RowDefinition Height="528*"   />
 
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -80,7 +80,7 @@
         <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="951,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open"/>
         <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1060,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
         <Button x:Name="ToSquare" Content="Rozlicz" HorizontalAlignment="Left" Margin="1169,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="ToSquare_Open"/>
-        <Grid HorizontalAlignment="Left" Height="475" Margin="330,56,0,0" Grid.Row="2" Grid.RowSpan="2" VerticalAlignment="Top" Width="934">
+        <Grid HorizontalAlignment="Left" Height="475" Margin="330,6,0,0" Grid.Row="3" VerticalAlignment="Top" Width="934">
             <ListView BorderThickness="1" ItemsSource="{Binding}" Margin="0,10,0,0" Height="Auto" x:Name="FirmaListBox" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
                 <ListView.View>
                     <GridView>
