--- a/System_do_zarzadzania_obslugi_sprzedazy/Statments.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Statments.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="Statments" Height="450" Width="800">
     <Grid>
-        
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="390" Margin="10,19,0,0" VerticalAlignment="Top" Width="772"/>
     </Grid>
 </Window>
