--- a/System_do_zarzadzania_obslugi_sprzedazy/ToSquare.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/ToSquare.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
-        Title="ToSquare" Height="450" Width="800">
+        Title="Rozlicz" Height="450" Width="800" ResizeMode="CanMinimize">
     <Grid>
         
     </Grid>
