--- a/System_do_zarzadzania_obslugi_sprzedazy/Search.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/Search.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
-        Title="Search" Height="225" Width="500">
+        Title="Szukanie" Height="225" Width="500" ResizeMode="CanMinimize">
     <Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="178,137,0,0" VerticalAlignment="Top" Width="98" Height="37"/>
     </Grid>
