--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -6,6 +6,39 @@
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280" ResizeMode="CanMinimize">
+    
+    <Window.Resources>
+        <local:Company x:Key="CompanyAndSeller" />
+
+        <DataTemplate DataType="{x:Type local:Company}">
+            <StackPanel>
+                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+                <TextBlock Width="50"  Text="{Binding Path = CompanyID}" />
+                <TextBlock Width="100" Text="{Binding Path = CompanyName}" />
+                <TextBlock Width="100" Text="{Binding Path = Nip}" />
+                <TextBlock Width="100" Text="{Binding Path = City}" />
+                <TextBlock Width="100" Text="{Binding Path = Street}" />
+                <TextBlock Width="100" Text="{Binding Path = PhoneNumber}" />
+                <TextBlock Width="200" Text="{Binding Path = Email}" />
+                </StackPanel>
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type local:Seller}">
+            <StackPanel>
+                <StackPanel Orientation="Horizontal"  Margin="0,5,0,0">
+                <TextBlock Width="50" Text="{Binding Path = IdSeller}" />
+                <TextBlock Width="100" Text="{Binding Path = Name}" />
+                <TextBlock Width="100" Text="{Binding Path = Surname}" />
+                <TextBlock Width="100" Text="{Binding Path = City}" />
+                <TextBlock Width="100" Text="{Binding Path = Street}" />
+                <TextBlock Width="100" Text="{Binding Path = NumberPhone}" />
+            </StackPanel>
+                </StackPanel>
+        </DataTemplate>
+    </Window.Resources>
+
+  
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="25*"  />
@@ -78,21 +111,11 @@
         <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1060,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
         <Button x:Name="ToSquare" Content="Rozlicz" HorizontalAlignment="Left" Margin="1169,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="ToSquare_Open"/>
         <Grid HorizontalAlignment="Left" Height="475" Margin="330,6,0,0" Grid.Row="3" VerticalAlignment="Top" Width="934">
-            <ListView BorderThickness="1" ItemsSource="{Binding}" Margin="0,10,0,0" Height="Auto" x:Name="FirmaListBox" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-                <ListView.View>
-                    <GridView>
-                        <GridView.Columns>
-                            <GridViewColumn Width="50" Header="ID" DisplayMemberBinding="{Binding CompanyID}" />
-                            <GridViewColumn Width="100" Header="Nazwa Firmy" DisplayMemberBinding="{Binding CompanyName}" />
-                            <GridViewColumn Width="100" Header="NIP" DisplayMemberBinding="{Binding Nip}" />
-                            <GridViewColumn Width="100" Header="Miasto" DisplayMemberBinding="{Binding City}" />
-                            <GridViewColumn Width="100" Header="Ulica" DisplayMemberBinding="{Binding Street}" />
-                            <GridViewColumn Width="100" Header="Numer Telefonu" DisplayMemberBinding="{Binding PhoneNumber}" />
-                            <GridViewColumn Width="100" Header="E-mail" DisplayMemberBinding="{Binding Email}" />
-                        </GridView.Columns>
-                    </GridView>
-                </ListView.View>
+            <ListView BorderThickness="1" ItemsSource="{Binding Source={StaticResource CompanyAndSeller}}" Margin="0,10,0,0" Height="Auto" x:Name="FirmaListBox" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+                
             </ListView>
         </Grid>
     </Grid>
 </Window>
+    
+    
