--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280" ResizeMode="CanMinimize">
 
-    <Grid>
+    <Grid Margin="0,0,4,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="25*"  />
             <RowDefinition Height="89*"/>
