--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:System_do_zarzadzania_obslugi_sprzedazy"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280" ResizeMode="CanMinimize">
+        Title="MainWindow" Height="720" Width="1277" ResizeMode="CanMinimize">
 
-    <Grid Margin="0,0,4,0">
+
+
+    <Grid Margin="0,0,-6,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="25*"  />
             <RowDefinition Height="89*"/>
@@ -79,21 +81,18 @@
         <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1054,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
         <Button x:Name="ToSquare" Content="Rozlicz" HorizontalAlignment="Left" Margin="1163,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="ToSquare_Open"/>
         <Grid HorizontalAlignment="Left" Height="475" Margin="330,6,0,0" Grid.Row="3" VerticalAlignment="Top" Width="934">
-            <ListView BorderThickness="1" Margin="0,10,0,0" Height="Auto" x:Name="FirmaListBox" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-                <ListView.View>
-                    <GridView>
-                        <GridView.Columns>
-                            <GridViewColumn Width="50" Header="ID" DisplayMemberBinding="{Binding CompanyID}" />
-                            <GridViewColumn Width="100" Header="Nazwa Firmy" DisplayMemberBinding="{Binding CompanyName}" />
-                            <GridViewColumn Width="100" Header="NIP" DisplayMemberBinding="{Binding Nip}" />
-                            <GridViewColumn Width="100" Header="Miasto" DisplayMemberBinding="{Binding City}" />
-                            <GridViewColumn Width="100" Header="Ulica" DisplayMemberBinding="{Binding Street}" />
-                            <GridViewColumn Width="100" Header="Numer Telefonu" DisplayMemberBinding="{Binding PhoneNumber}" />
-                            <GridViewColumn Width="100" Header="E-mail" DisplayMemberBinding="{Binding Email}" />
-                        </GridView.Columns>
-                    </GridView>
-                </ListView.View>
-
+            <DataGrid Name="CompanyDataGrid" AutoGenerateColumns="False" GridLinesVisibility="None">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Binding="{Binding CompanyID}"/>
+                    <DataGridTextColumn Header="Nazwa Firmy" Binding="{Binding CompanyName}"/>
+                    <DataGridTextColumn Header="Nip" Binding="{Binding Nip}"/>
+                    <DataGridTextColumn Header="Miasto" Binding="{Binding City}"/>
+                    <DataGridTextColumn Header="Ulica" Binding="{Binding Street}"/>
+                    <DataGridTextColumn Header="Numer Telefonu" Binding="{Binding PhoneNumber}"/>
+                    <DataGridTextColumn Header="E-mail" Binding="{Binding Email}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+            <ListView BorderThickness="1" Margin="929,462,0,0" Height="Auto" x:Name="FirmaListBox" Width="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
             </ListView>
         </Grid>
     </Grid>
