--- a/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
+++ b/System_do_zarzadzania_obslugi_sprzedazy/MainWindow.xaml
@@ -20,7 +20,7 @@
 
         </Grid.ColumnDefinitions>
         <DockPanel>
-            <Menu DockPanel.Dock="Top" Height="26" Margin="0,0,0,0">
+            <Menu DockPanel.Dock="Top" Height="26" Margin="0,0,10,0">
                 <MenuItem Header="_Dane">
                 </MenuItem>
                 <MenuItem Header="_Edycja">
@@ -71,16 +71,16 @@
         <Button x:Name="Settlements" Content="Rozliczenia" HorizontalAlignment="Left" Margin="425,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="Settlements_Open"/>
         <Button x:Name="Contractors" Content="Kontrahenci" HorizontalAlignment="Left" Margin="637,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="Contractors_Open"/>
         <Button x:Name="Statments" Content="Zestawienia" HorizontalAlignment="Left" Margin="849,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="212" Height="81" Click="Statments_Open"/>
-        <Button x:Name="VATRegister" Content="Rejestry VAT" HorizontalAlignment="Left" Margin="1061,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="206" Height="81" Click="VATRegister_Open"/>
+        <Button x:Name="VATRegister" Content="Rejestry VAT" HorizontalAlignment="Left" Margin="1061,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="191" Height="81" Click="VATRegister_Open"/>
         <Button x:Name="Invoice" Content="Faktury" HorizontalAlignment="Left" Grid.Row="1" VerticalAlignment="Top" Width="208" Height="81" Margin="5,0,0,0" Click="Invoice_Open"/>
 
         <Button x:Name="AddUser" Content="Dodaj Firmę" HorizontalAlignment="Left" Margin="5,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Add_User"/>
         <Button Content="Usuń Firmę" HorizontalAlignment="Left" Margin="114,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Remove_User"/>
         <Button x:Name="refresh" Content="Odśwież" HorizontalAlignment="Left" Margin="223,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="refresh_Click"/>
-        <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="945,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open"/>
-        <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1054,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
-        <Button x:Name="ToSquare" Content="Rozlicz" HorizontalAlignment="Left" Margin="1163,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="ToSquare_Open"/>
-        <Grid HorizontalAlignment="Left" Height="475" Margin="330,6,0,0" Grid.Row="3" VerticalAlignment="Top" Width="934">
+        <Button x:Name="Print" Content="Drukuj" HorizontalAlignment="Left" Margin="930,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Print_Open"/>
+        <Button x:Name="Search" Content="Znajdź" HorizontalAlignment="Left" Margin="1039,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="Search_Open"/>
+        <Button x:Name="ToSquare" Content="Rozlicz" HorizontalAlignment="Left" Margin="1148,11,0,0" Grid.Row="2" VerticalAlignment="Top" Width="104" Height="39" Click="ToSquare_Open" Grid.RowSpan="2"/>
+        <Grid HorizontalAlignment="Left" Height="475" Margin="330,6,0,0" Grid.Row="3" VerticalAlignment="Top" Width="922">
             <DataGrid Name="CompanyDataGrid" AutoGenerateColumns="False" GridLinesVisibility="None">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="ID" Binding="{Binding CompanyID}"/>
